# 17th-TechEcho

./: .env.example  .env.example   .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  esbuild.js  esbuildEditors.js  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test.html
answers/: admin.py  models.py  urls.py  views.py
answers/forms/: __init__.py  answers_form.py  form.py
answers/migrations/: 0001_initial.py  0002_alter_answer_downvote_alter_answer_upvote.py  0002_initial.py  0002_remove_answer_downvote_remove_answer_upvote_and_more.py  0003_alter_answer_content.py
answers/utils/: answers.py  answers_sort.py
appointments/: models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
blogs/: forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_blog_category_delete_article_blog_category.py  0002_rename_article_blog.py  0003_category_blog_author_blog_comments_count_blog_views_and_more.py  0004_blog_is_draft.py  0005_tag_remove_blog_category_alter_blog_created_at_and_more.py  0006_remove_blog_tags_remove_blog_comments_count_and_more.py  0007_blog_likes.py  0008_blog_image.py  0009_alter_blog_image.py  0010_alter_blog_image.py  0011_blog_cover_image.py  0012_remove_blog_cover_image.py
chat/: consumers.py  models.py  routing.py  signals.py  urls.py  views.py
chat/forms/: chat_form.py  form.py
chat/migrations/: 0001_initial.py  0002_alter_groupmessage_options_and_more.py  0002_chatgroup_members.py  0003_alter_chatgroup_teacher.py  0003_chatgroup_members_online.py  0004_alter_chatgroup_teacher.py  0004_remove_chatgroup_members_online_and_more.py  0005_chatgroup_reservation.py  0005_remove_chatgroup_teacher.py  0006_chatgroup_is_public.py
chat/templatetags/: chat.py
core/: asgi.py  settings.py  urls.py
editors/: admin.py  apps.py  consumers.py  dockerfile.editor  models.py  routing.py  urls.py  views.py
editors/migrations/: 0001_initial.py
editors/utils/: default_code.py  run_code.py
home/: urls.py  views.py
home/migrations/: 0001_initial.py  0002_delete_question.py
home/templatetags/: home.py
lib/constants/: choices.py
lib/context_processors/: users.py
lib/models/: __init__.py  questions_sort_validator.py  soft_delete.py
notifications/: consumers.py  models.py  routing.py  signals.py
payments/: models.py  urls.py  views.py
products/: views.py
questions/: admin.py  models.py  urls.py  views.py
reservations/: admin.py  models.py  urls.py  views.py
search/: models.py  urls.py  views.py
static/: editors.css
teacher/: models.py  views.py
teachers/: admin.py  apps.py  models.py  urls.py  views.py
templates/: navbar.html
users/: admin.py  backends.py  helper.py  middleware.py  models.py  urls.py  views.py
(+236 files in other folders)
