[tool.poetry]
name = "techecho"
version = "0.1.0"
description = ""
authors = ["chen weichen <newsforcwc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = {version = "^2.9.9", extras = ["mac"]}
psycopg2 = {version = "^2.9.9", extras = ["windows"]}
social-auth-app-django = "^5.4.2"
social-auth-core = "^4.5.4"

[tool.poetry.extras]
mac = ["psycopg2-binary"]
windows = ["psycopg2"]


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.1"
commitizen = "^3.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"