[tool.poetry]
name = "techecho"
version = "0.1.0"
description = ""
authors = ["chen weichen <newsforcwc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
line-pay = "^0.2.0"
psycopg2-binary = { version = "^2.9.9", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
psycopg2 = { version = "^2.9.9", markers = "sys_platform == 'win32'" }
django-taggit = "^6.0.0"
django-htmx = "^1.19.0"
channels = {extras = ["daphne"], version = "^4.1.0"}
daphne = "^4.1.2"
django-allauth = "^64.2.1"



[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.1"
commitizen = "^3.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"